:sparkles: feat: RouteService updated